kubernetes/rate-limit/httpbin-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: httpbin
  namespace: rl
spec:
  serviceName: "httpbin"
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
