kubernetes/rate-limit/sleep-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sleep
  namespace: rl
spec:
  serviceName: "sleep"
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
