kubernetes/rate-limit/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: rl
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpbin
