kubernetes/rate-limit/sleep-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: rl
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sleep
